<resources>
    <string name="app_name">Popular Movies</string>
    <string name="title_activity_detail">Movie Detail</string>
    <string name="movie_summary">Movie Summary</string>
    <string name="vote_average">User Rating</string>
    <string name="release_date">Release Date</string>
    <string name="sort">Sort</string>
    <string name="popular">Popular</string>
    <string name="highest_rated">Highest rated</string>
    <string name="favourite">Favourite</string>
</resources>
