<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.MoviesActivity">

    <item
        android:id="@+id/map_menu"
        android:icon="@mipmap/ic_sort"
        android:orderInCategory="102"
        android:title="@string/sort"
        app:showAsAction="always">
        <menu>
            <group
                android:id="@+id/sort_movie"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/popular"
                    android:checked="true"
                    android:orderInCategory="1"
                    android:title="@string/popular"
                    app:showAsAction="ifRoom" />
                <item
                    android:id="@+id/highest"
                    android:orderInCategory="2"
                    android:title="@string/highest_rated"
                    app:showAsAction="ifRoom" />

            </group>
        </menu>
    </item>
</menu>